vendor/structopt-0.3.21/tests/ui/subcommand_opt_opt.stderr
error: Option<Option<T>> type is not allowed for subcommand
  --> $DIR/subcommand_opt_opt.rs:18:10
   |
18 |     cmd: Option<Option<Command>>,
   |          ^^^^^^^^^^^^^^^^^^^^^^^
